# folderdiff

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
folderdiff/: __init__.py  __version__.py  cli.py
tests/: conftest.py  test_cli.py  test_core.py
