[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "folderdiff"
dynamic = ["version"]
description = "FolderDiff is a tool to compare unzipped archives (e.g. Wordpress installations) with their original zip archive or a clean source folder."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Manfred Kaiser", email = "manfred.kaiser@ssh-mitm.at" }
]
keywords = ["folder", "compare", "diff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/ssh-mitm/folderdiff/blob/master/CHANGELOG.md"
Source = "https://github.com/ssh-mitm/folderdiff"
Tracker = "https://github.com/ssh-mitm/folderdiff/issues"

[project.scripts]
folderdiff = "folderdiff.cli:main"

[tool.hatch.version]
path = "folderdiff/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["folderdiff"]
