[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "folderdiff"
dynamic = ["version"]
description = "FolderDiff is a tool to compare unzipped archives (e.g. Wordpress installations) with their original zip archive or a clean source folder."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Manfred Kaiser", email = "manfred.kaiser@ssh-mitm.at" }
]
keywords = ["folder", "compare", "diff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/manfred-kaiser/folderdiff/blob/main/CHANGELOG.md"
Source = "https://github.com/manfred-kaiser/folderdiff"
Tracker = "https://github.com/manfred-kaiser/folderdiff/issues"

[project.scripts]
folderdiff = "folderdiff.cli:main"

[tool.hatch.version]
path = "folderdiff/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["folderdiff"]

[tool.hatch.envs.hatch-test]
dependencies = ["pytest"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args:tests/}"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.lint]
detached = false
dependencies = [
    "bandit",
    "black~=26.0",
    "Flake8-pyproject",
    "flake8",
    "mypy",
    "pylint",
    "pytest",
    "ruff",
]

[tool.hatch.envs.lint.scripts]
check = [
    "pytest",
    "black --check folderdiff",
    "bandit -r folderdiff",
    "ruff check folderdiff",
    "flake8 folderdiff",
    "pylint folderdiff",
    "mypy folderdiff",
]

[[tool.hatch.envs.lint.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
ignore = ["E203", "E501", "W503"]

[tool.mypy]
strict = true
install_types = true
non_interactive = true

[tool.pylint.MASTER]
load-plugins = "pylint.extensions.docparams"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "E501",    # Line too long
    "T201",    # `print` used - this is a CLI tool that prints its result to stdout
]

[tool.black]
target-version = ["py311"]

[tool.bumpversion]
current_version = "1.0.0"

[[tool.bumpversion.files]]
filename = "folderdiff/__version__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]: https://github.com/manfred-kaiser/folderdiff/compare/{current_version}...main"
replace = """[Unreleased]: https://github.com/manfred-kaiser/folderdiff/compare/{new_version}...main
[{new_version}]: https://github.com/manfred-kaiser/folderdiff/compare/{current_version}...{new_version}"""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = """## [Unreleased]

## [{new_version}] - {now:%Y-%m-%d}"""
